# screen-lens-dgx

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  compose.dgx-spark.yaml  pyproject.toml  setup_and_run_dgx.sh
docs/: DGX_SPARK.md
scripts/: assemble_ratita.py
src/: __init__.py  assemble.py  captioner.py  cli.py  config.py  embedder.py  frame_extractor.py  frame_select.py  ocr.py  ocr_benchmark.py  omlx_client.py  pipeline.py  reconstruct.py  stitch.py  transcribe.py  tui.py  vector_store.py
tests/: test_captioner.py  test_cases.yaml  test_dgx_spark.py  test_ocr_benchmark.py  test_pipeline.py  test_transcribe.py  test_transcribe_resume.py
